// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tags-list Renders \`tags-list\` with custom props 1`] = `
<div
  class="c-advanced-data-table"
>
  <div
    class="layout row wrap"
  >
    <div
      class="flex xs4"
    >
      <c-search-field-stub
        value="Tag"
      />
    </div>
    <div
      class="flex xs12"
    >
      <transition-stub
        mode="in-out"
        name="expand-transition"
      >
        <!---->
      </transition-stub>
    </div>
  </div>
  <div>
    <div
      class="v-table__overflow"
    >
      <table
        class="v-datatable v-table v-datatable--expand v-datatable--select-all theme--light"
      >
        <thead>
          <tr>
            <th>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              aria-label="Name: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="value"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Name
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Type: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="type"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Type
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Creation date: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="created"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Creation date
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Last modified on: Sorted descending. Activate to remove sorting."
              aria-sort="descending"
              class="column active desc sortable text-xs-left"
              data-value="updated"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Last modified on
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Last modified by: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="author.display_name"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Last modified by
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Actions: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              data-value="actions"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                Actions
              </div>
            </th>
          </tr>
          <tr
            class="v-datatable__progress"
          >
            <th
              class="column"
              colspan="7"
            >
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                class="v-progress-linear"
                role="progressbar"
                style="height: 2px;"
              >
                <div
                  class="v-progress-linear__background primary"
                  style="height: 2px; opacity: 0.3; width: 100%;"
                />
                <div
                  class="v-progress-linear__bar"
                >
                  <transition-stub
                    name="fade-transition"
                  >
                    <div
                      class="v-progress-linear__bar__indeterminate v-progress-linear__bar__indeterminate--active"
                    >
                      <div
                        class="v-progress-linear__bar__indeterminate long primary"
                      />
                      <div
                        class="v-progress-linear__bar__indeterminate short primary"
                      />
                    </div>
                  </transition-stub>
                  <transition-stub
                    name="slide-x-transition"
                  />
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <c-expand-btn-stub
                  class="ml-2"
                  expanded="true"
                />
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-0
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Created
              </span>
            </td>
            <td>
              04/03/2021 10:58:08
            </td>
            <td>
              04/03/2021 13:44:48
            </td>
            <td>
              author-0
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  tooltip="Delete"
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            >
              <div
                class="v-datatable__expand-content"
              >
                <div
                  class="secondary lighten-2"
                >
                  <tags-list-expand-panel-stub
                    tag="[object Object]"
                  />
                </div>
              </div>
            </transition-group-stub>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-1
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Imported
              </span>
            </td>
            <td>
              04/03/2021 10:58:09
            </td>
            <td>
              04/03/2021 13:44:49
            </td>
            <td>
              author-1
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  tooltip="Delete"
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <c-expand-btn-stub
                  class="ml-2"
                />
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-2
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Created
              </span>
            </td>
            <td>
              04/03/2021 10:58:10
            </td>
            <td>
              04/03/2021 13:44:50
            </td>
            <td>
              author-2
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  tooltip="Delete"
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-3
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Imported
              </span>
            </td>
            <td>
              04/03/2021 10:58:11
            </td>
            <td>
              04/03/2021 13:44:51
            </td>
            <td>
              author-3
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  tooltip="Delete"
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <c-expand-btn-stub
                  class="ml-2"
                />
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-4
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Created
              </span>
            </td>
            <td>
              04/03/2021 10:58:12
            </td>
            <td>
              04/03/2021 13:44:52
            </td>
            <td>
              author-4
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  tooltip="Delete"
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-5
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Imported
              </span>
            </td>
            <td>
              04/03/2021 10:58:13
            </td>
            <td>
              04/03/2021 13:44:53
            </td>
            <td>
              author-5
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  tooltip="Delete"
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <c-expand-btn-stub
                  class="ml-2"
                />
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-6
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Created
              </span>
            </td>
            <td>
              04/03/2021 10:58:14
            </td>
            <td>
              04/03/2021 13:44:54
            </td>
            <td>
              author-6
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  tooltip="Delete"
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-7
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Imported
              </span>
            </td>
            <td>
              04/03/2021 10:58:15
            </td>
            <td>
              04/03/2021 13:44:55
            </td>
            <td>
              author-7
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  tooltip="Delete"
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <c-expand-btn-stub
                  class="ml-2"
                />
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-8
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Created
              </span>
            </td>
            <td>
              04/03/2021 10:58:16
            </td>
            <td>
              04/03/2021 13:44:56
            </td>
            <td>
              author-8
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  tooltip="Delete"
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-9
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Imported
              </span>
            </td>
            <td>
              04/03/2021 10:58:17
            </td>
            <td>
              04/03/2021 13:44:57
            </td>
            <td>
              author-9
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  tooltip="Delete"
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <c-table-pagination-stub
    page="2"
    rows-per-page="10"
    total-items="11"
  />
</div>
`;

exports[`tags-list Renders \`tags-list\` with default props 1`] = `
<div
  class="c-advanced-data-table"
>
  <div
    class="layout row wrap"
  >
    <div
      class="flex xs4"
    >
      <c-search-field-stub />
    </div>
    <div
      class="flex xs12"
    >
      <transition-stub
        mode="in-out"
        name="expand-transition"
      >
        <!---->
      </transition-stub>
    </div>
  </div>
  <div>
    <div
      class="v-table__overflow"
    >
      <table
        class="v-datatable v-table v-datatable--expand theme--light"
      >
        <thead>
          <tr>
            <th
              aria-label=": Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              data-value=""
              role="columnheader"
              scope="col"
              width="20"
            >
              <div
                class="layout align-center"
              >
                
              </div>
            </th>
            <th
              aria-label="Name: Sorted ascending. Activate to sort descending."
              aria-sort="ascending"
              class="column active asc sortable text-xs-left"
              data-value="value"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Name
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Type: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="type"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Type
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Creation date: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="created"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Creation date
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Last modified on: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="updated"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Last modified on
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Last modified by: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="author.display_name"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Last modified by
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Actions: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              data-value="actions"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                Actions
              </div>
            </th>
          </tr>
          <tr
            class="v-datatable__progress"
          >
            <th
              class="column"
              colspan="7"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <!---->
                <c-expand-btn-stub
                  class="ml-2"
                />
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-0
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Created
              </span>
            </td>
            <td>
              04/03/2021 10:58:08
            </td>
            <td>
              04/03/2021 13:44:48
            </td>
            <td>
              author-0
            </td>
            <td>
              <div
                class="layout row"
              >
                <!---->
                <!---->
                <!---->
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <!---->
                <!---->
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-1
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Imported
              </span>
            </td>
            <td>
              04/03/2021 10:58:09
            </td>
            <td>
              04/03/2021 13:44:49
            </td>
            <td>
              author-1
            </td>
            <td>
              <div
                class="layout row"
              >
                <!---->
                <!---->
                <!---->
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <!---->
                <c-expand-btn-stub
                  class="ml-2"
                />
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-10
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Created
              </span>
            </td>
            <td>
              04/03/2021 10:58:18
            </td>
            <td>
              04/03/2021 13:44:58
            </td>
            <td>
              author-10
            </td>
            <td>
              <div
                class="layout row"
              >
                <!---->
                <!---->
                <!---->
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <!---->
                <c-expand-btn-stub
                  class="ml-2"
                />
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-2
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Created
              </span>
            </td>
            <td>
              04/03/2021 10:58:10
            </td>
            <td>
              04/03/2021 13:44:50
            </td>
            <td>
              author-2
            </td>
            <td>
              <div
                class="layout row"
              >
                <!---->
                <!---->
                <!---->
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <!---->
                <!---->
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-3
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Imported
              </span>
            </td>
            <td>
              04/03/2021 10:58:11
            </td>
            <td>
              04/03/2021 13:44:51
            </td>
            <td>
              author-3
            </td>
            <td>
              <div
                class="layout row"
              >
                <!---->
                <!---->
                <!---->
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <!---->
                <c-expand-btn-stub
                  class="ml-2"
                />
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-4
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Created
              </span>
            </td>
            <td>
              04/03/2021 10:58:12
            </td>
            <td>
              04/03/2021 13:44:52
            </td>
            <td>
              author-4
            </td>
            <td>
              <div
                class="layout row"
              >
                <!---->
                <!---->
                <!---->
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <!---->
                <!---->
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-5
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Imported
              </span>
            </td>
            <td>
              04/03/2021 10:58:13
            </td>
            <td>
              04/03/2021 13:44:53
            </td>
            <td>
              author-5
            </td>
            <td>
              <div
                class="layout row"
              >
                <!---->
                <!---->
                <!---->
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <!---->
                <c-expand-btn-stub
                  class="ml-2"
                />
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-6
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Created
              </span>
            </td>
            <td>
              04/03/2021 10:58:14
            </td>
            <td>
              04/03/2021 13:44:54
            </td>
            <td>
              author-6
            </td>
            <td>
              <div
                class="layout row"
              >
                <!---->
                <!---->
                <!---->
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <!---->
                <!---->
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-7
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Imported
              </span>
            </td>
            <td>
              04/03/2021 10:58:15
            </td>
            <td>
              04/03/2021 13:44:55
            </td>
            <td>
              author-7
            </td>
            <td>
              <div
                class="layout row"
              >
                <!---->
                <!---->
                <!---->
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <!---->
                <c-expand-btn-stub
                  class="ml-2"
                />
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-8
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Created
              </span>
            </td>
            <td>
              04/03/2021 10:58:16
            </td>
            <td>
              04/03/2021 13:44:56
            </td>
            <td>
              author-8
            </td>
            <td>
              <div
                class="layout row"
              >
                <!---->
                <!---->
                <!---->
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <!---->
                <!---->
              </div>
            </td>
            <td>
              <c-alarm-action-chip-stub>
                pattern-value-9
              </c-alarm-action-chip-stub>
            </td>
            <td>
              <span>
                Imported
              </span>
            </td>
            <td>
              04/03/2021 10:58:17
            </td>
            <td>
              04/03/2021 13:44:57
            </td>
            <td>
              author-9
            </td>
            <td>
              <div
                class="layout row"
              >
                <!---->
                <!---->
                <!---->
              </div>
            </td>
          </tr>
          <tr
            class="v-datatable__expand-row"
          >
            <transition-group-stub
              class="v-datatable__expand-col"
              colspan="7"
              tag="td"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <c-table-pagination-stub />
</div>
`;
